<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center">

    <com.google.android.ads.nativetemplates.TemplateView
        android:id="@+id/hint_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:gnt_template_type="@layout/gnt_small_template_view"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/z_present">
        </ImageView>
        <TextView
            android:id="@+id/getHintsTitle"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginStart="20dp"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/free_hints" />
    </LinearLayout>

    <TextView
        android:id="@+id/getHintsDailyBonus"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginTop="0dp"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:text="@string/daily_bonus_30"
        android:textStyle="bold"
        android:background="@drawable/z_gethints"
        android:textColor="@color/colorNavigationBar" />
    <TextView
        android:id="@+id/getHintsWatchVideo"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginTop="0dp"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:text="@string/reward_video_100"
        android:textStyle="bold"
        android:background="@drawable/z_gethintsvideo"
        android:textColor="@color/colorNavigationBar" />



    <TextView
        android:id="@+id/getHintsClose"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_margin="30dp"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:text="@string/close"
        android:background="@drawable/z_strokewhite"
        android:textColor="@color/colorPrimary" />


</LinearLayout>