<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textViewItitle"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginTop="0dp"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/incorrect" />
    <ImageView
        android:id="@+id/imageViewIpicture"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:padding="@dimen/letters_margin"
        android:gravity="center"
        android:layout_marginTop="0dp"
        android:background="@drawable/z_incorrect" />
    <TextView
        android:id="@+id/textViewImessage"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_marginTop="0dp"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/colorPrimary"
        android:text="@string/remove_some_letters_and_try_again" />
    <TextView
        android:id="@+id/textViewIbutton"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="center"
        android:layout_margin="30dp"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/colorNavigationBar"
        android:textStyle="bold"
        android:background="@drawable/z_yellowbutton"
        android:text="@string/close" />
</LinearLayout>
