<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="340dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/colorPrimaryDark"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textViewInfoMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:textColor="@color/colorPrimary"
        android:text="@string/rateUs" />

    <RatingBar
        android:id="@+id/rateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1"
        android:isIndicator="false"
        android:progressTint="@color/colorPrimary"
        android:layout_margin="15dp"
        >
    </RatingBar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewRateNoButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_margin="10dp"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="@drawable/z_strokewhite"
            android:text="@string/noThanks" />

        <TextView
            android:id="@+id/textViewRateOkButton"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_margin="10dp"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:background="@drawable/z_strokewhite"
            android:text="@string/ok" />


    </LinearLayout>



</LinearLayout>
